--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             <a href="./claude/index.html" class="button claude">Claude</a>
             <a href="./gemini/index.html" class="button gemini">Gemini</a>
             <a href="./deepseek/index.html" class="button deepseek">Deepseek</a>
+            <a href="./chatgpt/index.html" class="button chatgpt">ChatGPT</a>
         </div>
     </div>
 
