Add top navigation section with logo link and styling

--- a/chatgpt/index.html
+++ b/chatgpt/index.html
@@ -490,6 +490,18 @@
     </style>
   </head>
   <body>
+    <style>
+      .top-nav {
+        padding: var(--spacing-sm);
+        text-align: center;
+        background-color: var(--color-black);
+      }
+    </style>
+    <section class="top-nav">
+      <a href="../index.html" class="logo-link">
+        <button class="btn btn-primary" type="button">Root Page</button>
+      </a>
+    </section>
     <!-- Header / Navigation -->
     <header class="site-header">
       <div class="container nav">
