--- a/chatgpt/index.html
+++ b/chatgpt/index.html
@@ -60,7 +60,7 @@
       img { max-width: 100%; display: block; }
 
       /* Utilities */
-      .container { width: 100%; max-width: var(--container); margin: 0 auto; padding: 0 1rem; }
+      .container { width: 100%; max-width: var(--container); margin: 0 auto; padding: 0 1rem; border: none; border-color: transparent; }
       .grid { display: grid; gap: 1rem; }
       .btn {
         display: inline-flex; align-items: center; justify-content: center; gap: 0.5rem;
@@ -77,6 +77,7 @@
 
       /* Header (fixed responsive) */
       header.site-header {
+        padding: 0 1rem;
         position: sticky; top: 0; z-index: 50;
         backdrop-filter: blur(6px);
         background: rgba(215, 214, 207, 0.85);
@@ -84,7 +85,11 @@
       }
       .nav { display: flex; align-items: center; justify-content: space-between; padding: 0.8rem 0; }
       .brand { display: flex; align-items: center; gap: 0.6rem; font-weight: 700; letter-spacing: 0.5px; }
-      .brand-logo { width: 36px; height: 36px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, var(--color-silver), var(--color-khaki)); border: 2px solid var(--color-seal-brown); box-shadow: var(--shadow-soft); flex: 0 0 36px; }
+      .brand-logo { width: 36px; height: 36px; border-radius: 50%; background-image: url("https://tinyurl.com/yc2v97hu");
+        background-size: contain;
+        background-repeat: no-repeat; 
+        background-position: center;
+        flex: 0 0 36px; }
       .brand-name { font-family: "Dancing Script", cursive; font-size: 1.6rem; color: var(--color-seal-brown); }
 
       .nav-links { display: flex; align-items: center; gap: 0.4rem; }
@@ -103,7 +108,7 @@
       .hamburger span::after { top: 6px; }
 
       @media (max-width: 799px) {
-        .mobile-nav-toggle { display: block; }
+        .mobile-nav-toggle { display: block; border: none; background: transparent;}
         .nav { gap: .5rem; }
         .nav-links {
           position: fixed; inset: 60px 12px auto 12px; /* below header */
@@ -177,7 +182,7 @@
       .field input:focus, .field textarea:focus { border-color: var(--color-seal-brown); box-shadow: 0 0 0 4px rgba(87, 52, 30, 0.12); }
 
       /* Footer */
-      footer { margin-top: 2rem; background: linear-gradient(180deg, rgba(200, 197, 190, 0.55), rgba(171, 166, 155, 0.55)); border-top: 1px solid rgba(16, 15, 15, 0.06); }
+      footer {padding: 0 1rem; margin-top: 2rem; background: linear-gradient(180deg, rgba(200, 197, 190, 0.55), rgba(171, 166, 155, 0.55)); border-top: 1px solid rgba(16, 15, 15, 0.06); }
       .footer-grid { display: grid; gap: 1rem; padding: 1.2rem 0; }
       .footer-col { display: grid; gap: .4rem; }
       .qr { width: 110px; height: 110px; display: block; background: repeating-linear-gradient(90deg, var(--color-black) 0 4px, var(--color-white) 4px 8px), repeating-linear-gradient(0deg, var(--color-black) 0 4px, var(--color-white) 4px 8px); border: 8px solid var(--color-white); border-radius: 6px; box-shadow: var(--shadow-soft); }
@@ -332,7 +337,7 @@
         <div class="grid" style="grid-template-columns: repeat(1, minmax(0, 1fr))">
           <a class="soft-card" href="#/products?cat=Skincare">
             <div style="display:flex; align-items:center; gap:.8rem;">
-              <span class="icon-img"><img alt="Skincare icon" src="https://cdn.jsdelivr.net/gh/tabler/tabler-icons/icons/brand-abstract.svg"/></span>
+              <span class="icon-img"><img alt="Skincare icon" src="./images/skincare.png"/></span>
               <div>
                 <strong>Skincare</strong>
                 <p class="muted">Cleansers, serums, moisturizers</p>
@@ -341,7 +346,7 @@
           </a>
           <a class="soft-card" href="#/products?cat=Haircare">
             <div style="display:flex; align-items:center; gap:.8rem;">
-              <span class="icon-img"><img alt="Haircare icon" src="https://cdn.jsdelivr.net/gh/tabler/tabler-icons/icons/brush.svg"/></span>
+              <span class="icon-img"><img alt="Haircare icon" src="./images/hair.png"/></span>
               <div>
                 <strong>Haircare</strong>
                 <p class="muted">Oils, masks, scalp care</p>
@@ -350,7 +355,7 @@
           </a>
           <a class="soft-card" href="#/products?cat=Wellness">
             <div style="display:flex; align-items:center; gap:.8rem;">
-              <span class="icon-img"><img alt="Wellness icon" src="https://cdn.jsdelivr.net/gh/tabler/tabler-icons/icons/flower.svg"/></span>
+              <span class="icon-img"><img alt="Wellness icon" src="./images/meditation.png"/></span>
               <div>
                 <strong>Wellness</strong>
                 <p class="muted">Balms, bath, aromas</p>
