Update product details for Magnesium Oil Spray in the product catalog

--- a/chatgpt/index.html
+++ b/chatgpt/index.html
@@ -564,10 +564,11 @@
        Dummy Product Data
        ============================== */
       const PRODUCTS = [
-        { id: "1", name: "Rose Glow Serum", price: 24.0, category: "Skincare", images: [
-            "https://images.unsplash.com/photo-1611930022073-b7a4ba5fcccd?q=80&w=1200&auto=format&fit=crop",
-            "https://images.unsplash.com/photo-1618473963526-87b11925bdf1?q=80&w=1200&auto=format&fit=crop",
-          ], short: "A lightweight serum for daily radiance.", ingredients: ["Rosehip oil","Squalane","Vitamin E"], how: "Apply 2–3 drops to clean skin.", pros: ["Lightweight","Glowy finish","Fast absorbing"], cons: ["Not fragrance‑free"], warns: ["Patch test before use."] },
+        { id: "1", name: "Magnesium oil spray 100ml", price: 360, category: "Skincare", images: [
+            "https://tinyurl.com/hatatiq-magnesium-oil",
+            "https://tinyurl.com/hatatiq-magnesium-oil-3",
+            "https://tinyurl.com/hatatiq-magnesium-oil-4"
+          ], short: "A lightweight spray for daily radiance.", ingredients: ["Rosehip oil","Squalane","Vitamin E"], how: "Apply 2–3 drops to clean skin.", pros: ["Lightweight","Glowy finish","Fast absorbing"], cons: ["Not fragrance‑free"], warns: ["Patch test before use."] },
         { id: "2", name: "Lavender Cloud Balm", price: 18.5, category: "Wellness", images: [
             "https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9?q=80&w=1200&auto=format&fit=crop",
             "https://images.unsplash.com/photo-1603921326210-6edd2d60ca68?q=80&w=1200&auto=format&fit=crop",
