landing page responsive design modification done

--- a/chatgpt/index.html
+++ b/chatgpt/index.html
@@ -47,17 +47,15 @@
                 <div class="hero">
                     <div class="hero-wrap">
                         <div class="hero-card">
-                            <span class="pill">Handmade • Small Batch • Natural</span>
-                            <h1>Beauty, made by hand — for your daily ritual.</h1>
-                            <p class="muted">Calming, premium formulas crafted with love. Discover skincare, haircare, and wellness blends that feel like self‑care.</p>
+                            <h1>HAYATIQ</h1>
+                            <p class="muted">Handcrafted with intention. Natural wellness products for your everyday rituals.</p>
                             <div class="hero-cta">
-                                <a href="#/products" class="btn button-primary">Shop Now</a>
-                                <a href="#/about" class="btn button-ghost">Our Story</a>
+                                <a href="#/products" class="btn button-primary">Discover our products</a>
                             </div>
                         </div>
-                        <div>
+                        <!-- <div>
                             <div class="soft-card">
-                                <h2>Why Hayatiq?</h2>
+                                <h2>Why HAYATIQ?</h2>
                                 <p>We believe beauty should be gentle, honest, and effective. Each product is handcrafted in small batches using thoughtfully sourced ingredients.</p>
                                 <div style="display:flex;gap:.6rem;margin-top:.6rem;flex-wrap:wrap">
                                     <span class="tag">Paraben‑Free</span>
@@ -65,7 +63,7 @@
                                     <span class="tag">Recyclable</span>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <section aria-label="Featured Products">
@@ -76,9 +74,11 @@
                     <div class="products-grid" id="featuredGrid"></div>
                 </section>
                 <section aria-label="About Hayatiq">
-                    <div class="soft-card">
-                        <h2>About Us</h2>
-                        <p>Hayatiq is a handmade beauty brand rooted in calm. We create products we love to use ourselves—minimal formulas that let your natural glow shine.</p>
+					<div>
+						<div class="soft-card">
+							<h2>Why HAYATIQ?</h2>
+							<p>We believe wellness should be gentle, honest, and effective. Each product is handcrafted in small batches using thoughtfully sourced ingredients. We create products we love to use ourselves, minimal formulas that let your natural glow shine.</p>
+						</div>
                     </div>
                 </section>
                 <section aria-label="How It Works">
@@ -88,7 +88,7 @@
                     <div class="grid" style="grid-template-columns:repeat(1,minmax(0,1fr));gap:.9rem">
                         <div class="soft-card">
                             <strong>1. Source</strong>
-                            <p>We select premium botanicals and natural oils from trusted partners.</p>
+                            <p>We select premium natural ingredients from trusted partners.</p>
                         </div>
                         <div class="soft-card">
                             <strong>2. Craft</strong>
@@ -100,7 +100,7 @@
                         </div>
                         <div class="soft-card">
                             <strong>4. Wrap</strong>
-                            <p>Eco‑conscious packaging keeps it simple, beautiful, and recyclable.</p>
+                            <p>Minimalistic packaging keeps it simple and beautiful.</p>
                         </div>
                     </div>
                 </section>
@@ -165,7 +165,7 @@
             <section id="view-about" class="view" aria-label="About">
                 <div class="soft-card">
                     <h2>Our Story</h2>
-                    <p>Born from a love of simple rituals, Hayatiq crafts handmade beauty with a minimal, elegant touch. Our blends are inspired by nature and designed to soothe both skin and mind.</p>
+                    <p>Born from a love of simple rituals, HAYATIQ crafts handmade beauty with a minimal, elegant touch. Our blends are inspired by nature and designed to soothe both skin and mind.</p>
                 </div>
             </section>
             <section id="view-contact" class="view" aria-label="Contact">
@@ -221,9 +221,9 @@
                 <div class="footer-col">
                     <div class="brand" style="margin-bottom:.6rem">
                         <span class="brand-logo" aria-hidden="true"></span>
-                        <span class="brand-name">Hayatiq</span>
+                        <span class="brand-name">HAYATIQ</span>
                     </div>
-                    <p class="muted">Handmade beauty with a calming, premium feel.</p>
+                    <p class="muted">Handcrafted with intention. Natural wellness products for your everyday rituals.</p>
                 </div>
                 <div class="footer-col">
                     <strong>Explore</strong>
@@ -250,14 +250,8 @@
                         </a>
                     </div>
                 </div>
-                <div class="footer-col">
-                    <strong>QR</strong>
-                    <a href="#/" aria-label="QR to homepage" title="Scan to visit Hayatiq">
-                        <span class="qr" role="img" aria-label="QR code placeholder"></span>
-                    </a>
-                </div>
             </div>
-            <div class="container" style="padding-bottom:1rem;font-size:.85rem">© <span id="year"></span>Hayatiq. All rights reserved. </div>
+            <div class="container" style="padding-bottom:1rem;font-size:.85rem;text-align:center">© <span id="year"></span> HAYATIQ. All rights reserved. Handcrafted with intention. </div>
         </footer>
         <script src="./js/script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
