product detail update

--- a/chatgpt/index.html
+++ b/chatgpt/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Hayatiq — Handmade Beauty</title>
+        <title>Hayatiq — Handcrafted with Intention</title>
         <meta name="description" content="Hayatiq — Handmade beauty products with a calming, premium aesthetic.">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
