--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="container nav">
                 <a href="#/" class="brand" aria-label="Hayatiq Home">
                     <span class="brand-logo" aria-hidden="true"></span>
-                    <span class="brand-name">HAYA</span>
+                    <span class="brand-name">HAYATIQ</span>
                 </a>
                 <button class="mobile-nav-toggle" id="navToggle" aria-expanded="false" aria-controls="primaryNav">
                     <span class="hamburger" aria-hidden="true">
@@ -47,7 +47,7 @@
                 <div class="hero">
                     <div class="hero-wrap">
                         <div class="hero-card">
-                            <h1>HAYA</h1>
+                            <h1>HAYATIQ</h1>
                             <p class="muted">Handcrafted with intention. Natural wellness products for your everyday rituals.</p>
                             <div class="hero-cta">
                                 <a href="#/products" class="btn button-primary">Discover our products</a>
@@ -76,7 +76,7 @@
                 <section aria-label="About Hayatiq">
 					<div>
 						<div class="soft-card">
-							<h2>Why HAYA?</h2>
+							<h2>Why HAYATIQ?</h2>
 							<p>We believe wellness should be gentle, honest, and effective. Each product is handcrafted in small batches using thoughtfully sourced ingredients. We create products we love to use ourselves, minimal formulas that let your natural glow shine.</p>
 						</div>
                     </div>
@@ -221,7 +221,7 @@
                 <div class="footer-col">
                     <div class="brand" style="margin-bottom:.6rem">
                         <span class="brand-logo" aria-hidden="true"></span>
-                        <span class="brand-name">HAYA</span>
+                        <span class="brand-name">HAYATIQ</span>
                     </div>
                     <p class="muted">Handcrafted with intention. Natural wellness products for your everyday rituals.</p>
                 </div>
