Enhance mobile navigation and product display features
- Added close button styles for cart items.
- Improved desktop cart visibility with responsive adjustments.
- Updated product images to use placeholders for unavailable items.
- Implemented "Coming Soon" overlay for products not yet available.
- Refined cart functionality to prevent exceeding maximum quantity.

--- a/index.html
+++ b/index.html
@@ -15,30 +15,42 @@
         <header class="site-header">
             <div class="container nav">
                 <a href="#/" class="brand" aria-label="Hayatiq Home">
-                    <span class="brand-logo" aria-hidden="true"></span>
-                    <span class="brand-name">HAYATIQ</span>
+                <span class="brand-logo" aria-hidden="true"></span>
+                <span class="brand-name">HAYA</span>
+                </a>
+                <div class="nav-right">
+                <a href="#/cart" aria-label="Cart" class="cart-link">
+                    <span class="cart">
+                    <svg width="26" height="26" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                        <path d="M6 6h15l-2 9H8L6 2H2" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                        <circle cx="9" cy="21" r="1" fill="currentColor" />
+                        <circle cx="18" cy="21" r="1" fill="currentColor" />
+                    </svg>
+                    <span class="cart-count" id="cartCount">0</span>
+                    </span>
                 </a>
                 <button class="mobile-nav-toggle" id="navToggle" aria-expanded="false" aria-controls="primaryNav">
                     <span class="hamburger" aria-hidden="true">
-                        <span></span>
+                    <span></span>
                     </span>
                     <span class="visually-hidden">Toggle navigation</span>
                 </button>
+                </div>
                 <nav class="nav-links" id="primaryNav" aria-label="Primary">
-                    <a href="#/products" data-link>Products</a>
-                    <a href="#/categories" data-link>Categories</a>
-                    <a href="#/about" data-link>About</a>
-                    <a href="#/contact" data-link>Contact</a>
-                    <a href="#/cart" aria-label="Cart">
-                        <span class="cart">
-                            <svg width="26" height="26" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                                <path d="M6 6h15l-2 9H8L6 2H2" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                <circle cx="9" cy="21" r="1" fill="currentColor" />
-                                <circle cx="18" cy="21" r="1" fill="currentColor" />
-                            </svg>
-                            <span class="cart-count" id="cartCount">0</span>
-                        </span>
-                    </a>
+                <a href="#/products" data-link>Products</a>
+                <a href="#/categories" data-link>Categories</a>
+                <a href="#/about" data-link>About</a>
+                <a href="#/contact" data-link>Contact</a>
+                <a href="#/cart" aria-label="Cart" class="desktop-cart">
+                    <span class="cart">
+                    <svg width="26" height="26" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                        <path d="M6 6h15l-2 9H8L6 2H2" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                        <circle cx="9" cy="21" r="1" fill="currentColor" />
+                        <circle cx="18" cy="21" r="1" fill="currentColor" />
+                    </svg>
+                    <span class="cart-count" id="cartCount">0</span>
+                    </span>
+                </a>
                 </nav>
             </div>
         </header>
@@ -47,23 +59,12 @@
                 <div class="hero">
                     <div class="hero-wrap">
                         <div class="hero-card">
-                            <h1>HAYATIQ</h1>
+                            <h1>HAYA</h1>
                             <p class="muted">Handcrafted with intention. Natural wellness products for your everyday rituals.</p>
                             <div class="hero-cta">
                                 <a href="#/products" class="btn button-primary">Discover our products</a>
                             </div>
                         </div>
-                        <!-- <div>
-                            <div class="soft-card">
-                                <h2>Why HAYATIQ?</h2>
-                                <p>We believe beauty should be gentle, honest, and effective. Each product is handcrafted in small batches using thoughtfully sourced ingredients.</p>
-                                <div style="display:flex;gap:.6rem;margin-top:.6rem;flex-wrap:wrap">
-                                    <span class="tag">Paraben‑Free</span>
-                                    <span class="tag">Cruelty‑Free</span>
-                                    <span class="tag">Recyclable</span>
-                                </div>
-                            </div>
-                        </div> -->
                     </div>
                 </div>
                 <section aria-label="Featured Products">
@@ -76,7 +77,7 @@
                 <section aria-label="About Hayatiq">
 					<div>
 						<div class="soft-card">
-							<h2>Why HAYATIQ?</h2>
+							<h2>Why HAYA?</h2>
 							<p>We believe wellness should be gentle, honest, and effective. Each product is handcrafted in small batches using thoughtfully sourced ingredients. We create products we love to use ourselves, minimal formulas that let your natural glow shine.</p>
 						</div>
                     </div>
@@ -221,7 +222,7 @@
                 <div class="footer-col">
                     <div class="brand" style="margin-bottom:.6rem">
                         <span class="brand-logo" aria-hidden="true"></span>
-                        <span class="brand-name">HAYATIQ</span>
+                        <span class="brand-name">HAYA</span>
                     </div>
                     <p class="muted">Handcrafted with intention. Natural wellness products for your everyday rituals.</p>
                 </div>
