Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="hero-wrap">
                         <div class="hero-card">
                             <h1>HAYATIQ</h1>
-                            <p class="muted">Handcrafted with intention. Natural wellness products for your everyday rituals.</p>
+                            <p class="muted">Handcrafted with intention. Natural wellness products for your everyday rituals, gentle, mindful, and designed to nurture over time, because true wellness a lifestyle, not a rush.</p>
                             <div class="hero-cta">
                                 <a href="#/products" class="btn button-primary">Discover our products</a>
                             </div>
